initialization of the api

--- a/app/src/main/res/layout/activity_gym2.xml
+++ b/app/src/main/res/layout/activity_gym2.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btnRetour"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="10dp" />
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
