--- a/app/src/main/res/layout/activity_cardio2.xml
+++ b/app/src/main/res/layout/activity_cardio2.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".CardioActivity">
 
+    <Button
+        android:id="@+id/btnRetour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnRetour"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
