--- a/app/src/main/res/layout/activity_test_api.xml
+++ b/app/src/main/res/layout/activity_test_api.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfilActivity">
+    tools:context=".TestApi">
 
-    <Button
-        android:id="@+id/btnRetour"
+    <TextView
+        android:id="@+id/txtTestApi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnRetour"
-        android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:text="TextView"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="311dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
