--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,15 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/linearLayout2"
+        android:layout_width="216dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginEnd="150dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.48000002">
+        tools:layout_editor_absoluteY="49dp">
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -26,32 +24,40 @@
             android:text="@string/app_name"
             android:textSize="24sp"
             android:textStyle="bold" />
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginBottom="413dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+        <Button
+            android:id="@+id/btnCardio"
+            android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
+            android:text="@string/btnCardio"
 
-            <Button
-                android:id="@+id/btnGym"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/btnGym" />
+            />
 
-            <Button
-                android:id="@+id/btnCardio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/btnCardio" />
+        <Button
+            android:id="@+id/btnProfil"
+            android:layout_width="380dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btnProfil" />
 
-            <Button
-                android:id="@+id/btnProfil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/btnProfil" />
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/btnGym"
+            android:layout_width="380dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btnGym" />
     </LinearLayout>
 
 
