--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -7,6 +7,7 @@
     tools:context=".ProfilActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="412dp"
         android:layout_height="272dp"
         android:background="@color/beige"
@@ -45,13 +46,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nom"
-                android:textSize="30dp"
-                />
+                android:textSize="30dp" />
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="236dp"
         android:layout_height="70dp"
         android:layout_marginTop="320dp"
@@ -65,33 +66,90 @@
 
         <Button
             android:id="@+id/btnRetour"
-            android:layout_width="138dp"
-            android:layout_height="36dp"
+            android:layout_width="129dp"
+            android:layout_height="40dp"
             android:layout_margin="16dp"
-            android:text="@string/btnRetour"
             android:backgroundTint="#EFDCAC"
-            />
+            android:text="@string/btnRetour" />
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="381dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="1dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-            android:layout_width="376dp"
-            android:layout_height="54dp"
-            android:orientation="horizontal"
-            android:background="@color/beige"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="374dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="169dp"
+            android:layout_marginTop="90dp"
+            android:background="@color/black"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/beige"
+                android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="379dp"
-        android:layout_height="53dp"
-        android:background="@color/beige"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="448dp">
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="251dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_weight="1"
+                    android:text="Progression cardio" />
 
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="174dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="40dp"
+                    app:srcCompat="@drawable/chargement" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="79dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/beige"
+                android:orientation="horizontal"
+
+                >
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Progression musculation"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="20dp"/>
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="174dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/chargement" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 
