onclick setup to go on activity details

--- a/app/src/main/res/layout/item_div.xml
+++ b/app/src/main/res/layout/item_div.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/beige"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:clickable="true"
+    android:focusable="true">
 
     <ScrollView
         android:layout_width="match_parent"
