--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -7,7 +7,7 @@
     tools:context=".ProfilActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/container_firstName_LastName"
         android:layout_width="412dp"
         android:layout_height="272dp"
         android:background="@color/beige"
@@ -34,7 +34,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/FirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Prénom"
@@ -42,7 +42,7 @@
 
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/LastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nom"
@@ -86,6 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <LinearLayout
+            android:id="@+id/Container_global_progression"
             android:layout_width="match_parent"
             android:layout_height="169dp"
             android:layout_marginTop="90dp"
@@ -93,6 +94,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/Container_progression_cardio"
                 android:layout_width="match_parent"
                 android:layout_height="79dp"
                 android:layout_marginLeft="20dp"
@@ -121,6 +123,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/container_progression_musculation"
                 android:layout_width="match_parent"
                 android:layout_height="79dp"
                 android:layout_marginTop="8dp"
