--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/container_title"
         android:layout_width="216dp"
         android:layout_height="45dp"
         android:layout_marginStart="200dp"
@@ -27,6 +27,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/container_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="180dp"
@@ -37,31 +38,28 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/container_title">
 
         <Button
             android:id="@+id/btnCardio"
             android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:text="@string/btnCardio"
             android:backgroundTint="#EFDCAC"
-            />
+            android:text="@string/btnCardio" />
 
         <Button
             android:id="@+id/btnProfil"
             android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:text="@string/btnProfil"
             android:backgroundTint="#EFDCAC"
-            />
+            android:text="@string/btnProfil" />
 
         <Button
             android:id="@+id/btnGym"
             android:layout_width="380dp"
             android:layout_height="wrap_content"
-            android:text="@string/btnGym"
             android:backgroundTint="#EFDCAC"
-            />
+            android:text="@string/btnGym" />
     </LinearLayout>
 
 
