--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -103,7 +103,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/progression_cardio"
                     android:layout_width="251dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -117,7 +117,7 @@
                     android:layout_height="48dp"
                     android:layout_weight="1"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="40dp"
+                    android:paddingRight="15dp"
                     app:srcCompat="@drawable/chargement" />
 
             </LinearLayout>
@@ -135,20 +135,20 @@
                 >
 
                 <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/progression_muscu"
+                    android:layout_width="251dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Progression musculation"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginLeft="20dp"/>
+                    android:layout_weight="1"
+                    android:text="Progression musculation" />
 
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="174dp"
                     android:layout_height="48dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="10dp"
+                    android:paddingRight="20dp"
                     android:layout_weight="1"
                     app:srcCompat="@drawable/chargement" />
             </LinearLayout>
