remake of Api set on Activity_details + graddle updates

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -19,5 +19,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Details musculation" />
+
+        <TextView
+            android:id="@+id/txtMuscleName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
