bordure arrondit item

--- a/app/src/main/res/layout/item_div.xml
+++ b/app/src/main/res/layout/item_div.xml
@@ -4,14 +4,16 @@
     android:layout_height="150dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/beige"
     android:layout_margin="5dp"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="@drawable/rounded_background">
+    >
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <TextView
             android:id="@+id/txtMuscleName"
