--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="lightBlack">#454545</color>
     <color name="white">#FFFFFFFF</color>
     <color name="beige">#EFDCAC</color>
     <color name="red">#FC0303</color>
