--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -17,7 +17,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/userImageView"
             android:layout_width="142dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
